kubernetes/conductor/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dbos-ingress
  namespace: dbos
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ad994e5252cd240f480252abcc75486c-707864310.us-west-2.elb.amazonaws.com
      secretName: dbos-tls
  rules:
    - host: ad994e5252cd240f480252abcc75486c-707864310.us-west-2.elb.amazonaws.com
      http:
        paths:
          - path: /conductor(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: conductor
                port:
                  number: 8090
          - path: /app(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: dbos-app
                port:
                  number: 8080
          - path: /()(dex/.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: dex
                port:
                  number: 5556
          - path: /()(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: console
                port:
                  number: 80
